--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "fs": "^0.0.1-security",
     "nanoid": "^4.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -16,8 +17,9 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.61.0",
+    "sass": "^1.62.0",
     "sass-convert": "^0.5.2",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
