--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 
 [build]
-  command = "cd backend && npm i && npm run start & cd frontend && npm i && npm run build "
+  command = "cd frontend && npm i && npm run build "
   publish = "frontend/build"
