--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "cypress": "^12.10.0",
     "fs": "^0.0.1-security",
     "gh-pages": "^5.0.0",
     "nanoid": "^4.0.2",
