--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -2,7 +2,5 @@
   "compilerOptions": {
     "baseUrl": "src"
   },
-  "include": ["src",
-"./node_modules/cypress",
-"cypress/**/*.js"]
+  "include": ["src"]
 }
